# poetry-chuy-plugin

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: publish.yml  pylint.yml  pytest.yml
poetry_chuy_plugin/: __init__.py  plugin.py
tests/: test_chuy_plugin.py
