[tool.poetry]
name = "poetry-chuy-plugin"
version = "0.2.0"
description = "Plugin to integrate Chuy with Poetry"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UltiRequiem/poetry-chuy-plugin"
repository = "https://github.com/UltiRequiem/poetry-chuy-plugin"
keywords = ["commands", "utilities", "cli"]
include = ["LICENSE"]


[tool.poetry.dependencies]
python = "^3.7"
chuy = "1.2.0"
poetry = "^1.1.7"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.9.6"
pytest = "^6.2.4"

[tool.poetry.plugins."poetry.application.plugin"]
chuy = "poetry_chuy_plugin.plugin:ChuyPlugin"

[tool.chuy]
format = "poetry run black ."
lint = "poetry run pylint chuy tests"
tests = "poetry run pytest"
package = "poetry build && poetry publish"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
